[gd_scene load_steps=20 format=2]

[ext_resource path="res://Menu/MainMenu/assets/main_menu/bg-color.png" type="Texture" id=1]
[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/LevelMenu/assets/empty-map.png" type="Texture" id=3]
[ext_resource path="res://Game/GUI/controls/assets/refit_car.png" type="Texture" id=5]
[ext_resource path="res://Menu/BikeMenu/Buttons/Current.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/GUI/counter/RMCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu/BikeMenu/BikeMenu.gd" type="Script" id=8]
[ext_resource path="res://components/buttons/TextureIconButton.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0.4, 0.4, 0.4, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.447059, 0.25098, 0.52549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.419608, 0.223529, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.890196, 0.243137, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.890196, 0.243137, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.447059, 0.25098, 0.52549, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.196078, 0.419608, 0.223529, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.823529, 0.32549, 0.54902, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.890196, 0.243137, 0.533333, 1 )

[sub_resource type="DynamicFont" id=10]
size = 28
outline_size = 1
outline_color = Color( 0.533333, 0.388235, 0.211765, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=11]
length = 6.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SliderContainer/Detail/Image/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.31, 0.56, 0.82, 1.07, 1.33, 2.05, 2.27, 2.55, 2.85, 3.37, 3.67, 3.92, 4.2, 4.45, 4.69, 4.94, 5.19, 5.43, 5.68, 5.94, 6.19, 6.43, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 1 ]
}

[node name="BikeMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
texture = ExtResource( 1 )

[node name="RMCounter" parent="TextureRect" instance=ExtResource( 7 )]
anchor_left = 0.897
anchor_top = 0.041
anchor_right = 0.971
anchor_bottom = 0.093
margin_left = -0.0671387
margin_top = -0.263514
margin_right = -0.151245
margin_bottom = -0.199516

[node name="Title" type="Label" parent="TextureRect"]
margin_left = 25.8854
margin_top = 29.3583
margin_right = 722.885
margin_bottom = 128.358
custom_fonts/font = SubResource( 1 )
text = "Choose a bike: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 49.0
margin_top = 133.0
margin_right = 1328.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="TextureRect/SliderContainer"]
margin_right = 1279.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 6 )]
text = "Your bike"

[node name="Sataur" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 6 )]
margin_left = 224.0
margin_right = 444.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Sataur"

[node name="Drawster" parent="TextureRect/SliderContainer/Buttons" instance=ExtResource( 6 )]
margin_left = 448.0
margin_right = 668.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Drawster"

[node name="Detail" type="HBoxContainer" parent="TextureRect/SliderContainer"]
margin_top = 60.0
margin_right = 1279.0
margin_bottom = 420.0
alignment = 1

[node name="Image" type="CenterContainer" parent="TextureRect/SliderContainer/Detail"]
margin_right = 637.0
margin_bottom = 360.0
rect_min_size = Vector2( 600, 360 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TextureRect/SliderContainer/Detail/Image"]
position = Vector2( 182.245, 14.8972 )
scale = Vector2( 1.4, 1.4 )
centered = false
hframes = 6
vframes = 4
frame = 22

[node name="EmptySprite" type="Sprite" parent="TextureRect/SliderContainer/Detail/Image"]
position = Vector2( 334, 214 )
scale = Vector2( 0.9, 0.76 )
texture = ExtResource( 3 )

[node name="MenuOptions" type="VBoxContainer" parent="TextureRect/SliderContainer/Detail"]
margin_left = 641.0
margin_right = 1279.0
margin_bottom = 360.0
rect_min_size = Vector2( 400, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="MaxPower" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 30.0
margin_right = 638.0
margin_bottom = 90.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 10 )
text = "max power: ....... 0"
align = 1
valign = 1

[node name="MaxSpeed" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 90.0
margin_right = 638.0
margin_bottom = 150.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 10 )
text = "max speed: ....... 0"
align = 1
valign = 1

[node name="MaxJump" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 150.0
margin_right = 638.0
margin_bottom = 210.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 10 )
text = "max jump: .......... 0	"
align = 1
valign = 1

[node name="Lives" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 210.0
margin_right = 638.0
margin_bottom = 270.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 10 )
text = "lives: .................... 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="TextureRect/SliderContainer/Detail/MenuOptions"]
margin_top = 270.0
margin_right = 638.0
margin_bottom = 330.0
rect_min_size = Vector2( 420, 60 )
custom_fonts/font = SubResource( 10 )
text = "price: .................... 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = 266.0
margin_right = 640.0
margin_bottom = 342.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="btn_menu" parent="TextureRect/ButtonContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 76.0
expand = false
title = "Main menu"
change_scene = "res://Menu/MainMenu/MainMenu.tscn"

[node name="btn_refit" parent="TextureRect/ButtonContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 440.0
margin_right = 840.0
margin_bottom = 76.0
title = "Upgrade"
icon = ExtResource( 5 )

[node name="btn_pay" parent="TextureRect/ButtonContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 880.0
margin_right = 1280.0
margin_bottom = 76.0
expand = false
title = "Pay"

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
autoplay = "demonstration"
anims/demonstration = SubResource( 11 )

[connection signal="button_down" from="TextureRect/SliderContainer/Buttons/Current" to="." method="_on_Current_button_down"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Current" to="." method="_on_Current_pressed"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Sataur" to="." method="_on_Sataur_pressed"]
[connection signal="pressed" from="TextureRect/SliderContainer/Buttons/Drawster" to="." method="_on_Drawster_pressed"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_refit" to="." method="_on_btn_refit_pressed"]
[connection signal="pressed" from="TextureRect/ButtonContainer/btn_pay" to="." method="_on_btn_pay_pressed"]
